apps/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.7.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3456
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /db
              subPath: db
            - name: data
              mountPath: /files
              subPath: files
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vikunja-data
